--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -17,4 +17,8 @@
 
     <!-- Used by selector -->
     <color name="card_pressed">#7e3c3c3c</color>
+
+    <!-- Recents membar text color -->
+    <color name="recents_membar_text_color">@android:color/white</color>
+
 </resources>
