--- a/res/layout/slim_recent.xml
+++ b/res/layout/slim_recent.xml
@@ -72,9 +72,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
-            android:src="@drawable/ic_menu_delete"
+            android:src="@drawable/ic_slim_recent_delete"
             />
 
     </LinearLayout>
-
 </RelativeLayout>
