--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -18,8 +18,9 @@
     <!-- Used by selector -->
     <color name="card_pressed">#7e3c3c3c</color>
 
-    <!-- Recents membar text color -->
+    <!-- Recents membar colors -->
     <color name="recents_membar_text_color">@android:color/white</color>
+    <color name="recents_membar_color">@*android:color/accent_device_default_dark</color>
 
     <color name="legacy_icon_background">#FFFFFF</color>
 </resources>
