--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -21,6 +21,8 @@
     <dimen name="recent_card_layout_marginTop">5dp</dimen>
     <dimen name="recent_card_layout_marginBottom">5dp</dimen>
 
+    <dimen name="recent_membar_elevation">6dp</dimen>
+
     <!-- Slim recent app sidebar -->
     <dimen name="recent_app_sidebar_item_size">60dp</dimen>
     <dimen name="recent_app_sidebar_item_padding">2dp</dimen>
