--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -7,16 +7,12 @@
 
     <!-- Slim recent -->
     <color name="recent_background">#80000000</color>
+    <color name="recent_foreground">@color/recent_foreground_light</color>
+    <color name="recent_foreground_light">#ffeeeeee</color>
+    <color name="recent_foreground_dark">#cc000000</color>
 
     <!-- Card Color -->
-    <color name="card_background">#ffffffff</color>
-    <color name="card_background_header">#00ffffff</color>
-    <color name="card_backgroundExpand">#00ffffff</color>
-
-    <color name="card_text_color_header">#ff000000</color>
-
-    <!-- Used by selector -->
-    <color name="card_pressed">#7e3c3c3c</color>
+    <color name="recent_card_background">#ffe6e6e6</color>
 
     <!-- Recents membar colors -->
     <color name="recents_membar_text_color">@android:color/white</color>
