[WIP] Slim Recents T
See TODOs in code and test, and in particular:
- fix split screen

Change-Id: I7d04e77984b78525210f6d4c0a8cfeb53c1a9419

--- a/res/layout/recent_app_sidebar.xml
+++ b/res/layout/recent_app_sidebar.xml
@@ -2,6 +2,7 @@
 
 <com.android.systemui.slimrecent.AppSidebar
         xmlns:android="http://schemas.android.com/apk/res/android"
+        android:fitsSystemWindows="true"
         android:id="@+id/app_sidebar"
         android:layout_width="wrap_content"
         android:layout_height="match_parent" />
